--- a/src/components/Services/Content.astro
+++ b/src/components/Services/Content.astro
@@ -20,7 +20,7 @@ const successTheme =
 ---
 
 <article
-	class="col-span-4 lg:col-span-3 mt-12 lg:mt-8 lg:mr-8 overflow-y-scroll pr-4 scroll max-h-screen"
+	class="col-span-full sm:col-span-4 lg:col-span-3 mt-12 lg:mt-8 lg:mr-8 overflow-y-scroll pr-4 scroll max-h-screen"
 >
 	<Heading type={1}>Servicios</Heading>
 	<Paragraph>
