--- a/src/components/Services/LeftSideBar.astro
+++ b/src/components/Services/LeftSideBar.astro
@@ -2,7 +2,7 @@
 import LeftSideElement from "./LeftSideElement.astro";
 ---
 
-<nav>
+<nav class="hidden sm:block">
 	<ul class="text-sm leading-6">
         <LeftSideElement header="Bienvenida" content={[
             {
