--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,9 +26,10 @@ import Otter from "../components/Home/Otter";
 			<div
 				class="flex items-center justify-center gap-5 text-sm sm:text-base"
 			>
-				<button
-					class="bg-secondary hover:bg-green-500 dark:bg-green-500 dark:hover:bg-green-600 text-white px-5 py-4 rounded-md shadow-md font-semibold animate__animated animate__fadeInLeftBig ring-1 ring-slate-900/5"
-					>Servicios</button
+				<a
+					href="/services"
+					class="block bg-secondary hover:bg-green-500 dark:bg-green-500 dark:hover:bg-green-600 text-white px-5 py-4 rounded-md shadow-md font-semibold animate__animated animate__fadeInLeftBig ring-1 ring-slate-900/5"
+					>Servicios</a
 				>
 				<a
 					href="/contact"
