--- a/src/components/Header/Elements.astro
+++ b/src/components/Header/Elements.astro
@@ -10,8 +10,7 @@ import { Dropdown } from "../ui/Dropdown";
 	<Element content="Inicio" />
 	<li>
 		<button
-			id="mega-menu-full-dropdown-button"
-			data-collapse-toggle="mega-menu-full-dropdown"
+			id="services-trigger"
 			class="flex items-center justify-between w-full py-2 pl-3 pr-4 font-medium text-gray-700 rounded md:w-auto hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-600 md:p-0 dark:text-gray-400 md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-blue-500 md:dark:hover:bg-transparent dark:border-gray-700"
 			>Servicios <svg
 				class="w-5 h-5 ml-1"
