--- a/src/components/Header/MenuDropDown.astro
+++ b/src/components/Header/MenuDropDown.astro
@@ -3,11 +3,10 @@ import DropDownElement from "./DropDownElement.astro";
 ---
 
 <div
-	id="mega-menu-full-dropdown"
-	class="mt-1 border-t-gray-200 shadow-sm bg-gray-50 md:bg-white border-t dark:bg-dark-primary dark:border-gray-600/50 hidden"
+	id="services-target"
+	class="mt-1 border-t-gray-200 shadow-sm bg-gray-50 md:bg-white border-t dark:bg-dark-primary dark:border-gray-600/50 hidden overflow-y-scroll"
 >
 	<div
-		id="mega-menu-trigger" 
 		class="grid max-w-screen-xl px-4 py-5 mx-auto text-gray-900 dark:text-white sm:grid-cols-2 md:px-6"
 	>
 		<ul>
