solving responsive design issues

--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -5,7 +5,7 @@ import Body from "../../components/Services/Body.astro";
 
 <MainLayout>
 	<div id="main-bg" class="bg-white min-h-screen relative">
-		<section class="max-w-screen-xl h-full mx-auto py-36 px-10">
+		<section class="max-w-screen-xl h-full mx-auto sm:py-20 xl:py-36 px-10">
 			<Body />
 		</section>
 		<span
