--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -39,6 +39,7 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 
 <!-- FLOWBITE -->
 <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.5/dist/flowbite.min.css" />
+<script is:inline src="https://unpkg.com/flowbite@1.5.5/dist/flowbite.js"></script>
 
 <!-- ANIMATE CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
