--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,7 +16,7 @@ const { classList = "" } = Astro.props;
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-		<script is:inline src="/scripts/flowbite/dist/flowbite.js"></script>
+		<!-- <script is:inline src="/scripts/flowbite/dist/flowbite.js"></script> -->
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
