GUI design and typing issues

--- a/src/components/Footer/Content.astro
+++ b/src/components/Footer/Content.astro
@@ -1,4 +1,4 @@
-<div class="grid justify-items-center grid-cols-2 gap-8 py-8 px-6 md:grid-cols-4">
+<div class="grid justify-items-center max-md:justify-items-start grid-cols-1 sm:grid-cols-2 gap-8 py-8 px-6 md:grid-cols-4">
 	<div>
 		<h2
 			class="mb-6 text-sm font-semibold text-muted uppercase dark:text-dark-muted"
