--- a/src/components/Header/AccountDropDown.astro
+++ b/src/components/Header/AccountDropDown.astro
@@ -1,11 +1,82 @@
+---
+import { client } from "../../api/client"
+import { gql } from "graphql-request"
+import type { IUser } from "../../interfaces/User"
+import Toastify from "toastify-js"
+import { warningToast } from "../../util/toastClasses"
 
-<div id="account-trigger-dropdown" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700">
-    <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefault">
-      <li>
-        <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Registrarse</a>
-      </li>
-      <li>
-        <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Iniciar sesión</a>
-      </li>
-    </ul>
+const GET_USER = gql`
+	{
+		userToken {
+			_id
+			username
+			email
+			imageUrl
+			occupation
+		}
+	}
+`
+const token = localStorage.getItem("x-access-token") || ""
+if (token) {
+	try {
+		const res = (await client.request(GET_USER, undefined, {
+			"x-access-token": token,
+		})) as { user: IUser }
+		var user = res.user
+	} catch (error) {
+		Toastify({
+			text: "⚠️ Inicia sesión de nuevo",
+      duration: 5000,
+      stopOnFocus: true,
+      gravity: "bottom",
+      className: warningToast
+		}).showToast()
+	}
+}
+---
+
+{token ? (
+  <div
+	id="account-trigger-dropdown"
+	class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
+>
+	<ul
+		class="py-1 text-sm text-gray-700 dark:text-gray-200"
+		aria-labelledby="dropdownDefault"
+	>
+		<li>
+			<a
+				href="#"
+				class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+				>Registrarse</a
+			>
+		</li>
+		<li>
+			<a
+				href="#"
+				class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+				>Iniciar sesión</a
+			>
+		</li>
+	</ul>
 </div>
+) : (
+  <div
+	id="account-trigger-dropdown"
+	class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700"
+>
+	<ul
+		class="py-1 text-sm text-gray-700 dark:text-gray-200"
+		aria-labelledby="dropdownDefault"
+	>
+		<li>
+			<a
+				href="/profile"
+				class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+				>Perfil</a
+			>
+		</li>
+	</ul>
+</div>
+)}
+
