completing footer links, solving gui issues and adding meta tags

--- a/src/components/Footer/Content.astro
+++ b/src/components/Footer/Content.astro
@@ -1,3 +1,8 @@
+---
+import PrivicyPolice from "./PrivicyPolice";
+
+---
+
 <div class="grid justify-items-center max-md:justify-items-start grid-cols-1 sm:grid-cols-2 gap-8 py-8 px-6 md:grid-cols-4">
 	<div>
 		<h2
@@ -26,7 +31,7 @@
 		<ul class="text-muted dark:text-dark-muted">
 			<li class="mb-4">
 				<p class="hover:underline"
-					>Whatsapp: +57 123 4568 4568</p
+					>Whatsapp: +57 3001792793</p
 				>
 			</li>
 			<li class="mb-4">
@@ -41,14 +46,12 @@
 			Legal
 		</h2>
 		<ul class="text-muted dark:text-dark-muted">
+			<PrivicyPolice client:load/>
 			<li class="mb-4">
-				<a href="#" class="hover:underline">Política de privacidad</a>
+				<a href="/licenses" class="hover:underline">Licencias</a>
 			</li>
 			<li class="mb-4">
-				<a href="#" class="hover:underline">Licencias</a>
-			</li>
-			<li class="mb-4">
-				<a href="#" class="hover:underline"
+				<a href="/terms-conditions" class="hover:underline"
 					>Términos &amp; condiciones</a
 				>
 			</li>
@@ -62,13 +65,10 @@
 		</h2>
 		<ul class="text-muted dark:text-dark-muted">
 			<li class="mb-4">
-				<a href="#" class="hover:underline">Facebok</a>
+				<a href="https://www.facebook.com/profile.php?id=100089343072563" class="hover:underline">Facebok</a>
 			</li>
 			<li class="mb-4">
-				<a href="#" class="hover:underline">Instagram</a>
-			</li>
-			<li class="mb-4">
-				<a href="#" class="hover:underline">Twitter</a>
+				<a href="https://www.instagram.com/whousecolombia/" class="hover:underline">Instagram</a>
 			</li>
 		</ul>
 	</div>
