--- a/src/components/Footer/scripts.astro
+++ b/src/components/Footer/scripts.astro
@@ -3,26 +3,5 @@
 <script is:inline src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script is:raw>
   AOS.init();
-</script>
-
-<script is:inline>
-  const menuTarget = document.getElementById("mega-menu-full")
-  const megaMenuTrigger = document.getElementById("mega-menu-trigger")
-  const servicesTrigger = document.getElementById("services-trigger")
-  const servicesTarget = document.getElementById("services-target")
-
-
-  const servicesCollapse = new Collapse(servicesTarget)
-  const collapseMegaMenu = new Collapse(menuTarget, {
-    onCollapse() {
-      servicesCollapse.collapse()
-    }
-  })
-  megaMenuTrigger.onclick = () => {
-    collapseMegaMenu.toggle()
-  }
-
-  servicesTrigger.onclick = () => {
-    servicesCollapse.toggle()
-  }
-</script>
+</script> 
+<script is:inline src='/scripts/dropdownMenu.js'></script>			
