--- a/src/components/Services/Content.astro
+++ b/src/components/Services/Content.astro
@@ -28,7 +28,7 @@ const successTheme =
 			>precios, ofertas, requerimientos, contenido y beneficios</b
 		>. Lee atentamente o contáctate con nosotros via
 		<Badge>
-			<a href="/">Whatsapp</a>
+			<a href="https://wa.me/message/6JVWCHU4HSP2B1">Whatsapp</a>
 		</Badge>
 		o la sección de
 		<Badge>
@@ -344,7 +344,7 @@ const successTheme =
 	<Paragraph>
 		En caso de que requieras de un servicio relacionado con la limpieza que
 		no ofrecemos directamente, contáctanos via <Badge
-			><a href="/">Whatsapp</a>
+			><a href="https://wa.me/message/6JVWCHU4HSP2B1">Whatsapp</a>
 		</Badge> contándonos las características de tu situación. Posteriormente
 		te ofreceremos un serie de <b>planes, ofertas y beneficios</b> que podras
 		adquirir.
