--- a/src/components/Services/components/ComparisionTable.astro
+++ b/src/components/Services/components/ComparisionTable.astro
@@ -77,7 +77,7 @@ const { features, headers } = Astro.props;
 				features[0].availabilty.map((e) => (
 					<div>
 						<a
-							href="#"
+							target="_blank" href="https://wa.me/message/6JVWCHU4HSP2B1"
 							class="text-white block w-full bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:ring-blue-200 font-medium rounded-lg text-sm px-4 py-2.5 text-center dark:focus:ring-blue-900"
 						>
 							Solicitar ahora
