--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Otter from "../components/Home/Otter"
 	<div id="main-bg" class="global-bg">
 		<section id="init" class="max-w-screen-xl mx-auto py-36 px-4">
 			<h1
-				class="text-slate-800 font-extrabold font-roboto text-3xl sm:text-5xl lg:text-6xl tracking-tight text-center dark:text-white blink antialiased"
+				class="text-slate-800 font-extrabold text-3xl sm:text-5xl lg:text-6xl tracking-tight text-center dark:text-white blink antialiased font-roboto"
 				id="type-trigger"
 			>
 				Lavamos tus muebles a <span class="blink"></span>
@@ -76,7 +76,7 @@ import Otter from "../components/Home/Otter"
 	>
 		<article class="container max-w-screen-xl mx-auto pt-20 lg:pt-36 px-4">
 			<h2
-				class="text-slate-800 font-extrabold font-roboto text-2xl sm:text-4xl lg:text-5xl tracking-tight text-center dark:text-white"
+				class="text-slate-800 font-extrabold text-2xl sm:text-4xl lg:text-5xl tracking-tight text-center dark:text-white font-roboto"
 				data-aos="fade-down"
 			>
 				Realmente <em>"lavando a mano"</em> no se puede.
@@ -93,7 +93,7 @@ import Otter from "../components/Home/Otter"
 				verdad es que no nos creeras hasta que pruebes nuestro servicio
 				donde usamos <em class="font-medium text-green-500"
 					>máquinas especializadas</em
-				>. Te preguntarás por qué no nos llamaste antes.
+				>y te preguntarás por qué no nos llamaste antes.
 			</blockquote>
 			<figure
 				class="flex items-center justify-center gap-4"
@@ -131,7 +131,7 @@ import Otter from "../components/Home/Otter"
 			<div data-aos="zoom-in-up" data-aos-delay="300">
 				<div class="flex flex-col items-center gap-10 w-10/12 mx-auto">
 					<h1
-						class="text-center text-slate-800 font-extrabold font-roboto text-2xl sm:text-4xl lg:text-5xl tracking-tight dark:text-white order-2 lg:order-1"
+						class="text-center text-slate-800 font-extrabold text-2xl sm:text-4xl lg:text-5xl tracking-tight dark:text-white order-2 lg:order-1 font-roboto"
 					>
 						Nos enfocamos en el cuidado.
 					</h1>
@@ -239,7 +239,7 @@ import Otter from "../components/Home/Otter"
 		<article class="container max-w-screen-xl mx-auto py-20 lg:py-36 px-8">
 			<div data-aos="fade-up" data-aos-delay="400">
 				<h1
-					class="text-center font-extrabold font-roboto text-2xl sm:text-4xl lg:text-5xl tracking-tight dark:text-white order-2 lg:order-1"
+					class="text-center font-extrabold text-2xl sm:text-4xl lg:text-5xl tracking-tight dark:text-white order-2 lg:order-1 font-roboto"
 				>
 					<span
 						class="antialiased text-transparent bg-gradient-to-r from-green-300 to-sky-400 bg-clip-text"
