--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,7 +9,7 @@ export interface Props {
 	image?: string;
 }
 
-const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
+const { title, description, image = "/png/Logo_and_title.png" } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -20,8 +20,11 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
-<meta name="title" content={title} />
+<meta name="title" content={title} /> 
 <meta name="description" content={description} />
+<meta name="language" content="Spanish">
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="Lavada, Limpieza, Restauración, Colombia">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
@@ -29,6 +32,13 @@ const { title, description, image = "/placeholder-social.jpg" } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image:url" content={new URL(image, Astro.url)} />
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:locale" content="es_ES">
+
+<!-- ROBOTO FONT -->
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
