--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,7 +24,7 @@ const { classList = "" } = Astro.props;
 			<slot />
 		</main>
 		<Footer />
-		<a target="_blank" href="/" class="animate-bounce rounded-full bg-white dark:bg-slate-800 shadow-md fixed z-10 bottom-4 right-4 p-3 group hover:scale-105 transition-transform ring-1 ring-slate-900/5 flex items-center justify-center flex-wrap text-green-400 hover:text-green-500">
+		<a target="_blank" href="https://wa.me/message/6JVWCHU4HSP2B1" class="animate-bounce rounded-full bg-white dark:bg-slate-800 shadow-md fixed z-10 bottom-4 right-4 p-3 group hover:scale-105 transition-transform ring-1 ring-slate-900/5 flex items-center justify-center flex-wrap text-green-400 hover:text-green-500">
 			<div class="max-w-0 group-hover:max-w-md flex-1 transition-all duration-1000 ease-in-out group-hover:pr-2">
 				<h5 class="text-sm  dark:text-slate-300 font-medium truncate">Comunícate con nosotros</h5>
 			</div>
