--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -21,7 +21,7 @@ import Form from "../components/Contact/Form";
 
 			<article class="flex-1">
 				<h1
-					class="text-slate-800 font-extrabold font-roboto text-3xl sm:text-5xl lg:text-5xl mb-7 tracking-tight text-center dark:text-white"
+					class="text-slate-800 font-extrabold text-3xl sm:text-5xl lg:text-5xl mb-7 tracking-tight text-center dark:text-white font-roboto"
 				>
 					Resuelve tus dudas.
 				</h1>
